# rig_reconfigure

./: .gitignore  .gitmodules  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml  setup.cfg  setup.py  эксперимент в консоли с комментами.txt
.github/workflows/: ci.yml
cmake/: CheckGit.cmake
include/: git_version.hpp  node_window.hpp  parameter_tree.hpp  parameter_window.hpp  queue.hpp  requests.hpp  responses.hpp  ros_parameter.hpp  service_wrapper.hpp  utils.hpp
resource/: rig_reconfigure.desktop
rig_reconfigure/: rig_reconfigure.py
src/: git_version.cpp.in  node_window.cpp  parameter_tree.cpp  parameter_window.cpp  rig_reconfigure.cpp  service_wrapper.cpp  utils.cpp
