<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>rig_reconfigure</name>
    <version>1.0.0</version>
    <description>Dear ImGui based alternative for RQT reconfigure plugin.</description>
    <maintainer email="team-spatzenhirn@uni-ulm.de">Team Spatzenhirn</maintainer>
    <license>MIT</license>

    <exec_depend>rosidl_default_runtime</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
